--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,4 @@ services:
   cache:
     ports:
       - "7000:7000"
-    build:
-      context: .
-      dockerfile: dockerFile
+    image: umitdogan33/custom-cache
