--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,9 @@ jobs:
 
     - name: Build
       run: go build -v ./...
-
+    - name: Checkout code
+      uses: actions/checkout@v2
+        
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
