--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
         go-version: '1.22'
 
     - name: Build
-      run: go build -v -o CustomCacheApp ./...
+      run: go build -v .
     - name: Checkout code
       uses: actions/checkout@v2
         
