--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: CustomCacheApp
-        path: CustomCacheApp
+        path: .
         
     - name: Checkout code
       uses: actions/checkout@v2
@@ -56,6 +56,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./  # Path to the built binary
+        asset_path: ./CustomCacheApp  # Path to the built binary
         asset_name: CustomCacheApp  # Name of the asset in the release
         asset_content_type: application/octet-stream
