--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -56,6 +56,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./CustomCacheApp  # Path to the built binary
-        asset_name: CustomCacheApp  # Name of the asset in the release
-        asset_content_type: application/octet-stream
+        asset_path: ./CustomCacheApp.zip  # Path to the built binary
+        asset_name: CustomCacheApp.zip  # Name of the asset in the release
+        asset_content_type: application/zip
