--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
         go-version: '1.22' # Buradaki sürümü projenizde kullandığınız Go sürümüne göre ayarlayın
 
     - name: Build
-      run: go build -o app
+      run: go build -o CustomCache
 
     - name: Archive build
       uses: actions/upload-artifact@v2
