--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build_linux:
     name: Build Go project
     runs-on: ubuntu-latest
     
@@ -28,10 +28,32 @@ jobs:
         name: CustomCache
         path: ./CustomCache
 
-  release:
+  build_win:
+    name: Build Go project windows
+    runs-on: windows-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: '1.22' # Buradaki sürümü projenizde kullandığınız Go sürümüne göre ayarlayın
+
+    - name: Build
+      run: go build -o CustomCache
+
+    - name: Archive build
+      uses: actions/upload-artifact@v2
+      with:
+        name: CustomCache.exe
+        path: ./CustomCache.exe
+
+  release_linux:
     name: Create Release
-    needs: build
-    runs-on: ubuntu-latest
+    needs: build_win
+    runs-on: windows-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
     steps:
@@ -40,6 +62,12 @@ jobs:
       with:
         name: CustomCache
         path: ./CustomCache
+
+    - name: Download build Win
+      uses: actions/download-artifact@v2
+      with:
+        name: CustomCache.exe
+        path: ./CustomCache.exe
 
     - name: Create Release
       id: create_release
@@ -63,4 +91,15 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./CustomCache/CustomCache
         asset_name: CustomCache
+        asset_content_type: application/octet-stream
+
+    - name: Upload Release Asset
+      id: upload-release-asset-win
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./CustomCache/CustomCache.exe
+        asset_name: CustomCache.exe
         asset_content_type: application/octet-stream
