--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build_linux:
+  build:
     name: Build Go project
     runs-on: ubuntu-latest
     
@@ -17,57 +17,37 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: '1.22' # Buradaki sürümü projenizde kullandığınız Go sürümüne göre ayarlayın
+        go-version: '1.16' # Projenizde kullandığınız Go sürümüne göre ayarlayın
 
-    - name: Build
-      run: go build -o CustomCache
+    - name: Build for Linux
+      run: GOOS=linux GOARCH=amd64 go build -o app-linux
 
-    - name: Archive build
+    - name: Build for Windows
+      run: GOOS=windows GOARCH=amd64 go build -o app-windows.exe
+
+    - name: Build for macOS
+      run: GOOS=darwin GOARCH=amd64 go build -o app-macos
+
+    - name: Archive builds
       uses: actions/upload-artifact@v2
       with:
-        name: CustomCache
-        path: ./CustomCache
+        name: builds
+        path: |
+          app-linux
+          app-windows.exe
+          app-macos
 
-  build_win:
-    name: Build Go project windows
-    runs-on: windows-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: '1.22' # Buradaki sürümü projenizde kullandığınız Go sürümüne göre ayarlayın
-
-    - name: Build
-      run: go build -o CustomCache
-
-    - name: Archive build
-      uses: actions/upload-artifact@v2
-      with:
-        name: CustomCache.exe
-        path: ./CustomCache.exe
-
-  release_linux:
+  release:
     name: Create Release
-    needs: build_win
-    runs-on: windows-latest
+    needs: build
+    runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
     steps:
-    - name: Download build
+    - name: Download builds
       uses: actions/download-artifact@v2
       with:
-        name: CustomCache
-        path: ./CustomCache
-
-    - name: Download build Win
-      uses: actions/download-artifact@v2
-      with:
-        name: CustomCache.exe
-        path: ./CustomCache.exe
+        name: builds
 
     - name: Create Release
       id: create_release
@@ -82,24 +62,35 @@ jobs:
         draft: false
         prerelease: false
 
-    - name: Upload Release Asset
-      id: upload-release-asset
+    - name: Upload Linux Release Asset
+      id: upload-linux-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./CustomCache/CustomCache
-        asset_name: CustomCache
+        asset_path: ./app-linux
+        asset_name: app-linux
         asset_content_type: application/octet-stream
 
-    - name: Upload Release Asset
-      id: upload-release-asset-win
+    - name: Upload Windows Release Asset
+      id: upload-windows-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./CustomCache/CustomCache.exe
-        asset_name: CustomCache.exe
+        asset_path: ./app-windows.exe
+        asset_name: app-windows.exe
+        asset_content_type: application/octet-stream
+
+    - name: Upload macOS Release Asset
+      id: upload-macos-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./app-macos
+        asset_name: app-macos
         asset_content_type: application/octet-stream
